Add new activity with song list for each music category.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
         </activity>
         <activity
             android:name=".PlaylistActivity"
-            android:label="@string/title_activity_playlist"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:label="@string/title_activity_playlist"/>
+        <activity
+            android:name=".SongActivity"
+            android:label="@string/title_activity_song"/>
     </application>
 
 </manifest>
